--- a/pppppp/View/Friend&MeDataView/CreatePointView/HealthDataView.storyboard
+++ b/pppppp/View/Friend&MeDataView/CreatePointView/HealthDataView.storyboard
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -76,66 +75,8 @@
                                     <constraint firstItem="loL-8f-2LO" firstAttribute="top" secondItem="GYI-q8-w9F" secondAttribute="bottom" constant="16" id="xu1-gX-maV"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f7W-ki-BbV">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Xv-kx-Zoh">
                                 <rect key="frame" x="24" y="304" width="366" height="176"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter Exercise &amp; Time." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lwh-Ey-iq7">
-                                        <rect key="frame" x="24" y="24" width="170" height="20"/>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
-                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Comming Soon..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lqK-5F-Z3P">
-                                        <rect key="frame" x="104" y="96" width="158" height="24"/>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
-                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="Lwh-Ey-iq7" firstAttribute="top" secondItem="f7W-ki-BbV" secondAttribute="top" constant="24" id="6zF-dY-6bW"/>
-                                    <constraint firstAttribute="height" constant="176" id="91y-gO-LdF"/>
-                                    <constraint firstItem="lqK-5F-Z3P" firstAttribute="centerX" secondItem="f7W-ki-BbV" secondAttribute="centerX" id="OmE-be-V79"/>
-                                    <constraint firstItem="Lwh-Ey-iq7" firstAttribute="leading" secondItem="f7W-ki-BbV" secondAttribute="leading" constant="24" id="aut-R2-ksR"/>
-                                    <constraint firstItem="lqK-5F-Z3P" firstAttribute="centerY" secondItem="f7W-ki-BbV" secondAttribute="centerY" constant="20" id="bpf-u1-aSB"/>
-                                </constraints>
-                            </view>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="SVz-Sw-HEj"/>
-                        <color key="backgroundColor" red="0.074509803920000006" green="0.0" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstItem="bMI-by-4Vb" firstAttribute="leading" secondItem="SVz-Sw-HEj" secondAttribute="leading" constant="24" id="1hF-RT-8nW"/>
-                            <constraint firstItem="f7W-ki-BbV" firstAttribute="leading" secondItem="SVz-Sw-HEj" secondAttribute="leading" constant="24" id="CrP-DM-ozq"/>
-                            <constraint firstItem="bMI-by-4Vb" firstAttribute="top" secondItem="SVz-Sw-HEj" secondAttribute="top" constant="40" id="WXa-aj-mat"/>
-                            <constraint firstItem="f7W-ki-BbV" firstAttribute="top" secondItem="bMI-by-4Vb" secondAttribute="bottom" constant="40" id="feF-Uw-m6s"/>
-                            <constraint firstItem="SVz-Sw-HEj" firstAttribute="trailing" secondItem="f7W-ki-BbV" secondAttribute="trailing" constant="24" id="hxh-Cy-QpW"/>
-                            <constraint firstItem="SVz-Sw-HEj" firstAttribute="trailing" secondItem="bMI-by-4Vb" secondAttribute="trailing" constant="24" id="kAK-Tb-vKy"/>
-                        </constraints>
-                    </view>
-                    <connections>
-                        <outlet property="enterExerciseBackgroundView" destination="f7W-ki-BbV" id="qoP-mz-7pW"/>
-                        <outlet property="enterWeightbackgroundView" destination="bMI-by-4Vb" id="thh-5Q-6ge"/>
-                        <outlet property="exerciseTimeTextField" destination="xTX-mp-TUU" id="Os5-Xe-ia3"/>
-                        <outlet property="saveExerciseButtonLayout" destination="jCv-IG-eh2" id="5Nj-7q-oGm"/>
-                        <outlet property="selectExerciseTextField" destination="NoX-SH-DcP" id="cdw-xS-JPx"/>
-                        <outlet property="weightTextField" destination="loL-8f-2LO" id="NVM-Kf-t6S"/>
-                        <outlet property="writeWeightDataButtonLayout" destination="62u-dQ-csJ" id="Llv-0f-qwV"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="rSU-1W-kfG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2073.913043478261" y="428.57142857142856"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="szj-nR-kVh">
-            <objects>
-                <viewController id="Mak-DC-cK3" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="66O-PV-mwf">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9Xv-kx-Zoh">
-                                <rect key="frame" x="28" y="360" width="366" height="176"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter Exercise &amp; Time." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bbS-71-7GY">
                                         <rect key="frame" x="24" y="24" width="170" height="20"/>
@@ -154,7 +95,7 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jCv-IG-eh2">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jCv-IG-eh2">
                                         <rect key="frame" x="296" y="87" width="54" height="32"/>
                                         <color key="backgroundColor" red="0.52156862749999999" green="0.62745098040000002" blue="0.7725490196" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
@@ -190,7 +131,7 @@
                                     </textField>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="bbS-71-7GY" firstAttribute="leading" secondItem="9Xv-kx-Zoh" secondAttribute="leading" constant="24" id="0vS-9s-6Wv"/>
+                                    <constraint firstItem="bbS-71-7GY" firstAttribute="leading" secondItem="9Xv-kx-Zoh" secondAttribute="leading" constant="24" id="CTN-eh-Rc8"/>
                                     <constraint firstItem="Gm2-Du-s8z" firstAttribute="centerY" secondItem="xTX-mp-TUU" secondAttribute="centerY" id="VKI-EK-5fd"/>
                                     <constraint firstItem="xTX-mp-TUU" firstAttribute="leading" secondItem="9Xv-kx-Zoh" secondAttribute="leading" constant="24" id="WEj-oz-Mw6"/>
                                     <constraint firstItem="bbS-71-7GY" firstAttribute="top" secondItem="9Xv-kx-Zoh" secondAttribute="top" constant="24" id="Zyl-eN-MmN"/>
@@ -204,22 +145,30 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="zdg-u8-Cba"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <viewLayoutGuide key="safeArea" id="SVz-Sw-HEj"/>
+                        <color key="backgroundColor" red="0.074509803920000006" green="0.0" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="9Xv-kx-Zoh" firstAttribute="centerY" secondItem="66O-PV-mwf" secondAttribute="centerY" id="1cd-2E-cnd"/>
-                            <constraint firstItem="9Xv-kx-Zoh" firstAttribute="centerX" secondItem="66O-PV-mwf" secondAttribute="centerX" id="69l-vr-a9e"/>
+                            <constraint firstItem="bMI-by-4Vb" firstAttribute="leading" secondItem="SVz-Sw-HEj" secondAttribute="leading" constant="24" id="1hF-RT-8nW"/>
+                            <constraint firstItem="9Xv-kx-Zoh" firstAttribute="leading" secondItem="SVz-Sw-HEj" secondAttribute="leading" constant="24" id="73X-W4-nn2"/>
+                            <constraint firstItem="bMI-by-4Vb" firstAttribute="top" secondItem="SVz-Sw-HEj" secondAttribute="top" constant="40" id="WXa-aj-mat"/>
+                            <constraint firstItem="9Xv-kx-Zoh" firstAttribute="top" secondItem="bMI-by-4Vb" secondAttribute="bottom" constant="40" id="bgD-LI-2nA"/>
+                            <constraint firstItem="SVz-Sw-HEj" firstAttribute="trailing" secondItem="9Xv-kx-Zoh" secondAttribute="trailing" constant="24" id="j61-VZ-ydA"/>
+                            <constraint firstItem="SVz-Sw-HEj" firstAttribute="trailing" secondItem="bMI-by-4Vb" secondAttribute="trailing" constant="24" id="kAK-Tb-vKy"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="enterExerciseBackgroundView" destination="9Xv-kx-Zoh" id="dMY-1c-R2u"/>
+                        <outlet property="enterWeightbackgroundView" destination="bMI-by-4Vb" id="thh-5Q-6ge"/>
+                        <outlet property="exerciseTimeTextField" destination="xTX-mp-TUU" id="Os5-Xe-ia3"/>
+                        <outlet property="saveExerciseButtonLayout" destination="jCv-IG-eh2" id="5Nj-7q-oGm"/>
+                        <outlet property="selectExerciseTextField" destination="NoX-SH-DcP" id="cdw-xS-JPx"/>
+                        <outlet property="weightTextField" destination="loL-8f-2LO" id="NVM-Kf-t6S"/>
+                        <outlet property="writeWeightDataButtonLayout" destination="62u-dQ-csJ" id="Llv-0f-qwV"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="MXh-0B-WZU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rSU-1W-kfG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2841" y="429"/>
+            <point key="canvasLocation" x="2073.913043478261" y="428.57142857142856"/>
         </scene>
     </scenes>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
