--- a/pppppp/View/Base.lproj/Main.storyboard
+++ b/pppppp/View/Base.lproj/Main.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hdq-Kh-yzh">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,9 +19,8 @@
                     </tabBar>
                     <connections>
                         <segue destination="wNc-sj-BlU" kind="relationship" relationship="viewControllers" id="9jo-1u-AOR"/>
-                        <segue destination="VJV-9V-U43" kind="relationship" relationship="viewControllers" id="19m-bk-R45"/>
-                        <segue destination="LgM-iV-OHb" kind="relationship" relationship="viewControllers" id="u8T-Qj-LjF"/>
-                        <segue destination="pmW-Fp-So0" kind="relationship" relationship="viewControllers" id="mcc-K9-A0u"/>
+                        <segue destination="VJV-9V-U43" kind="relationship" relationship="viewControllers" id="dLm-YY-Exh"/>
+                        <segue destination="pmW-Fp-So0" kind="relationship" relationship="viewControllers" id="MmA-v3-xL3"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Opp-0M-dPy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -37,7 +35,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4he-fG-6IB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3983" y="-99"/>
+            <point key="canvasLocation" x="3983" y="-38"/>
         </scene>
         <!--TimeLineView-->
         <scene sceneID="IDQ-EA-dbP">
@@ -47,25 +45,15 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PUK-Ji-dZG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4009" y="-5"/>
-        </scene>
-        <!--HealthChartsView-->
-        <scene sceneID="MkZ-gA-Bq3">
-            <objects>
-                <viewControllerPlaceholder storyboardIdentifier="HealthChartsViewController" storyboardName="HealthChartsView" id="LgM-iV-OHb" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="5uA-hd-KRd"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="FOv-NQ-873" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="4009" y="88"/>
+            <point key="canvasLocation" x="3990" y="88"/>
         </scene>
         <!--ProfileView-->
         <scene sceneID="cfU-cD-I83">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="q2Z-Qw-aBX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewControllerPlaceholder storyboardIdentifier="ProfileViewController" storyboardName="ProfileView" id="pmW-Fp-So0" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="cbE-2X-uDN"/>
                 </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="q2Z-Qw-aBX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3979" y="210"/>
         </scene>
